--- a/src/styling/styles.css
+++ b/src/styling/styles.css
@@ -1,7 +1,10 @@
+html{
+  scroll-behavior: smooth;
+}
+
 body {
   font-family: "Helvetica", sans-serif;
-  scroll-behavior: smooth;
-  margin-bottom: 40px;
+  margin-bottom: 70px;
 }
 
 /* Home Page */
@@ -15,9 +18,9 @@ body {
   color: orange;
 }
 
-/* .custom-margin{
-  padding-left: 135px;
-} */
+.home {
+  padding-top: 75px;
+}
 
 /* Navbar */
 .head {
