--- a/src/styling/styles.css
+++ b/src/styling/styles.css
@@ -29,6 +29,12 @@ body {
   letter-spacing: 1.5px;
   font-family: "Roboto", sans-serif;
 }
+.margin-login{
+  margin-right: 1.5px;
+}
+.margin-register{
+  margin-left: 1.5px;
+}
 .logo {
   height: 46px;
 }
